feat (all) added collapse panel for sample app

--- a/sample/src/button/basic-use.html
+++ b/sample/src/button/basic-use.html
@@ -1,7 +1,11 @@
 <template>
     <section>
-        <h4>Basic Button</h4>
-        <button au-kendo-button class="k-primary">Primary Button</button>
-        <button au-kendo-button>Button</button>
+        <collapse-panel title="Basic Use" allow-collapse.bind="false">
+            <button au-kendo-button class="k-primary">Primary Button</button>
+            <button au-kendo-button>Button</button>
+        </collapse-panel>
+       <p>
+       	TODO: Add code samples section - we ideally need some sort of markdown support (code formatting etc)
+       </p>
     </section>
 </template>
