--- a/sample/src/button/images.html
+++ b/sample/src/button/images.html
@@ -1,6 +1,7 @@
 <template>
     <section>
-        <h4>Images</h4>
-        <button au-kendo-button="icon: funnel" class="k-primary">Image Button</button>
+        <collapse-panel title="Images" allow-collapse.bind="false">
+            <button au-kendo-button="icon: funnel" class="k-primary">Image Button</button>
+        </collapse-panel>
     </section>
 </template>
