feat (all) added highlight.pack js, implemented auto-complete, added events/options helper modules

--- a/sample/index.html
+++ b/sample/index.html
@@ -4,6 +4,8 @@
     <title>Aurelia</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="github.css">
+    <script src="highlight.pack.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body aurelia-app="main">
