--- a/sample/src/button/images.html
+++ b/sample/src/button/images.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Images" allow-collapse.bind="false">
-            <button au-kendo-button="icon: funnel" class="k-primary">Image Button</button>
+            <button au-kendo-button="icon: funnel">Image Button</button>
         </collapse-panel>
     </section>
 </template>
