--- a/sample/src/shared/collapse-panel.html
+++ b/sample/src/shared/collapse-panel.html
@@ -1,6 +1,6 @@
 <template>
     <div>
-        <div class="panel panel-default">
+        <div class="panel ${ 'panel-' + panelClass }">
             <div class="panel-heading" click.delegate="toggle()">
                 <span class="glyphicon glyphicon-chevron-down" if.bind="!collapsed && allowCollapse"></span>
                 <span class="glyphicon glyphicon-chevron-up" if.bind="collapsed && allowCollapse"></span>
