--- a/sample/src/autocomplete/remote-data.html
+++ b/sample/src/autocomplete/remote-data.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="gooy/aurelia-markdown"></require>;
     <section>
         <collapse-panel title="Remote Data" allow-collapse.bind="false" footer="Current value: ${value}">
             <p><strong>People:</strong></p>
@@ -12,12 +13,25 @@
         </collapse-panel>
         <!-- TODO: Make markup automatically initialised -->
         <collapse-panel title="Code Preview" collapsed.bind="true">
-            <pre><code class="html">&lt;input au-kendo-autocomplete=&quot;data-source.bind: datasource;
+          <markdown>
+            ```
+            <input au-kendo-autocomplete="data-source.bind: datasource;
+                                          data-text-field: ProductName;
+                                          filter: contains;
+                                          min-length: 3" 
+                                          value.bind="value" 
+                                          style="width: 300px" />
+            ```
+          </markdown>
+
+            <!-- <pre><code class="html">&lt;input au-kendo-autocomplete=&quot;data-source.bind: datasource;
                               data-text-field: ProductName;
                               filter: contains;
                               min-length: 3&quot; 
        value.bind=&quot;value&quot; 
-       style=&quot;width: 300px&quot; /&gt;</code></pre>
+       style=&quot;width: 300px&quot; /&gt;</code></pre> -->
         </collapse-panel>
+
+        
     </section>
 </template>
