--- a/sample/src/autocomplete/remote-data.html
+++ b/sample/src/autocomplete/remote-data.html
@@ -16,22 +16,12 @@
           <markdown>
             ```
             <input au-kendo-autocomplete="data-source.bind: datasource;
-                                          data-text-field: ProductName;
-                                          filter: contains;
-                                          min-length: 3" 
-                                          value.bind="value" 
-                                          style="width: 300px" />
+                                data-text-field: ProductName;
+                                filter: contains;
+                                min-length: 3" value.bind="value" style="width: 300px"></input>
             ```
           </markdown>
 
-            <!-- <pre><code class="html">&lt;input au-kendo-autocomplete=&quot;data-source.bind: datasource;
-                              data-text-field: ProductName;
-                              filter: contains;
-                              min-length: 3&quot; 
-       value.bind=&quot;value&quot; 
-       style=&quot;width: 300px&quot; /&gt;</code></pre> -->
-        </collapse-panel>
-
-        
+        </collapse-panel>   
     </section>
 </template>
