--- a/sample/src/button/images.html
+++ b/sample/src/button/images.html
@@ -3,5 +3,30 @@
         <collapse-panel title="Images" allow-collapse.bind="false">
             <button au-kendo-button="icon: funnel">Image Button</button>
         </collapse-panel>
+
+        <collapse-panel title="Code Preview">
+            <div au-kendo-tabstrip>
+                <ul>
+                    <li class="k-state-active">HTML</li>
+                    <li>Code</li>
+                </ul>
+                <div>
+                    <textarea au-markdown>
+```
+<button au-kendo-button="icon: funnel">Image Button</button>
+```
+                    </textarea>
+                </div>
+                <div>
+                    <textarea au-markdown>
+```
+export class Images {
+
+}
+```
+                    </textarea>
+                </div>
+            </div>
+        </collapse-panel>        
     </section>
 </template>
