added to button and tabstrip controls

--- a/sample/index.html
+++ b/sample/index.html
@@ -4,6 +4,8 @@
     <title>Aurelia</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
+    <link rel="stylesheet" href="jspm_packages/github/kendo-labs/bower-kendo-ui@2015.2.813/styles/kendo.common.min.css" />
+    <link rel="stylesheet" href="jspm_packages/github/kendo-labs/bower-kendo-ui@2015.2.813/styles/kendo.default.min.css" />
     <link rel="stylesheet" href="styles.css">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
