--- a/sample/src/combobox/server-filtering.html
+++ b/sample/src/combobox/server-filtering.html
@@ -1,8 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Images" allow-collapse.bind="false">
-            <button au-kendo-button="icon: funnel">Image Button</button>
-            <button au-kendo-button="spriteCssClass: (k-icon netherlandsFlag)">Sprite Icon Button</button>
+        <collapse-panel title="Server Filtering" allow-collapse.bind="false">
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -14,16 +12,13 @@
                 <div>
                     <textarea au-markdown>
 ```
-<button au-kendo-button="icon: funnel">Image Button</button>
 ```
                     </textarea>
                 </div>
                 <div>
                     <textarea au-markdown>
 ```
-export class Images {
 
-}
 ```
                     </textarea>
                 </div>
