--- a/sample/src/tabstrip/images.html
+++ b/sample/src/tabstrip/images.html
@@ -1,8 +1,8 @@
 <template>
     <section>
         <collapse-panel title="Images" allow-collapse.bind="false">
-            <button au-kendo-button="icon: funnel">Image Button</button>
-            <button au-kendo-button="spriteCssClass: (k-icon netherlandsFlag)">Sprite Icon Button</button>
+            <div au-kendo-tabstrip>
+            </div>        
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -14,16 +14,13 @@
                 <div>
                     <textarea au-markdown>
 ```
-<button au-kendo-button="icon: funnel">Image Button</button>
 ```
                     </textarea>
                 </div>
                 <div>
                     <textarea au-markdown>
 ```
-export class Images {
 
-}
 ```
                     </textarea>
                 </div>
