remove jspm-git

--- a/sample/index.html
+++ b/sample/index.html
@@ -30,9 +30,9 @@
         cfg.packages[m.name] = {
             "main": "index",
               "dependencies": {
-                "aurelia-binding": "github:aurelia/binding@^0.10.2",
-                "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.11.2",
-                "aurelia-templating": "github:aurelia/templating@^0.16.0"
+                // "aurelia-binding": "github:aurelia/binding@^0.10.2",
+                // "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.11.2",
+                // "aurelia-templating": "github:aurelia/templating@^0.16.0"
               }
             };
 
