--- a/sample/index.html
+++ b/sample/index.html
@@ -29,12 +29,8 @@
         // Create a new systemjs package with the package name
         cfg.packages[m.name] = {
             "main": "index",
-              "dependencies": {
-                // "aurelia-binding": "github:aurelia/binding@^0.10.2",
-                // "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.11.2",
-                // "aurelia-templating": "github:aurelia/templating@^0.16.0"
-              }
-            };
+            "dependencies": m.jspm.dependencies
+        };
 
         System.config(cfg);
 
