--- a/sample/src/installation-wizard/instructions.html
+++ b/sample/src/installation-wizard/instructions.html
@@ -1,24 +1,26 @@
 <template>
 
-  <h2>Thanks! Now let's install this plugin!</h2>
+  <p>You have decided to install the ${wizardConfig.version} version of Kendo UI.</p>
 
-  <p>You have selected to install Kendo-${wizardConfig.version}</p>
+  <require from="installation-wizard/core-instructions.html"></require>
+  <core-instructions show.bind="wizardConfig.version == 'core'"></core-instructions>
 
-  <p show.bind="wizardConfig.version == 'core'">
-    You can install Kendo-core by running this command:
+  <require from="installation-wizard/pro-instructions.html"></require>
+  <pro-instructions show.bind="wizardConfig.version == 'pro'"></pro-instructions>
 
-    jspm install kendo-ui
+
+  <p>${lastStep + 1}. Now let's open up "app.html" and load Kendo's CSS files</p>
+  <textarea au-markdown>
+```
+<require from="kendo-ui/styles/kendo.common.core.min.css"></require>
+<require from="kendo-ui/styles/kendo.bootstrap.min.css"></require>
+```
+  </textarea>
+
+  <h2>You are done!</h2>
+  <p>
+    It is now possible to drop some custom-elements into your DOM. See the other pages on this website for detailed information on how to do this.
   </p>
-
-  <div show.bind="wizardConfig.version == 'pro'">
-    <p show.bind="wizardConfig.hasCredentials">
-      jspm-git approach
-    </p>
-
-    <p show.bind="!wizardConfig.hasCredentials">
-      vendors approach
-    </p>
-  </div>
 
   <require from="installation-wizard/navigation"></require>
   <navigation previous.bind="previous" next.bind="false"></navigation>
