added scheduler, toolbar

--- a/sample/src/autocomplete/basic-use.html
+++ b/sample/src/autocomplete/basic-use.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Basic Use" allow-collapse.bind="false" footer="Current value: ${value}">
+        <collapse-panel title="Basic use" allow-collapse.bind="false" footer="Current value: ${value}">
             <p><strong>People:</strong></p>
             <p>
                 <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value"></input>
