--- a/sample/src/autocomplete/remote-data.html
+++ b/sample/src/autocomplete/remote-data.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Remote Data" allow-collapse.bind="false" footer="Current value: ${value}">
+        <collapse-panel title="Remote data" allow-collapse.bind="false" footer="Current value: ${value}">
             <p><strong>People:</strong></p>
             <p>
                 <input au-kendo-autocomplete="data-source.bind: datasource;
