--- a/sample/src/button/basic-use.html
+++ b/sample/src/button/basic-use.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Basic Use" allow-collapse.bind="false">
+        <collapse-panel title="Basic use" allow-collapse.bind="false">
             <button au-kendo-button class="k-primary">Primary Button</button>
             <button au-kendo-button>Button</button>
         </collapse-panel>
