--- a/sample/src/dropdownlist/api.html
+++ b/sample/src/dropdownlist/api.html
@@ -4,7 +4,7 @@
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
-            <div au-kendo-dropdownlist>
+            <div au-kendo-tabstrip>
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
@@ -12,6 +12,7 @@
                 <div>
                     <textarea au-markdown>
 ```
+
 ```
                     </textarea>
                 </div>
