--- a/sample/src/tabstrip/basic-use.html
+++ b/sample/src/tabstrip/basic-use.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Basic Use" allow-collapse.bind="false">
+        <collapse-panel title="Basic use" allow-collapse.bind="false">
             <div au-kendo-tabstrip>
 			    <ul>
 			        <li class="k-state-active">This is tab 1</li>
