--- a/sample/src/dropdownlist/server-filtering.html
+++ b/sample/src/dropdownlist/server-filtering.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Server Filtering" allow-collapse.bind="false">
+        <collapse-panel title="Server filtering" allow-collapse.bind="false">
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
