fix(sample): update deps, fix kendo image problem

--- a/sample/src/app.html
+++ b/sample/src/app.html
@@ -1,8 +1,8 @@
 <template>
   	<require from='./nav-bar'></require>
     <require from="bootstrap/css/bootstrap.css"></require>
-    <require from="kendo-ui/styles/kendo.common.core.min.css"></require>
-    <require from="kendo-ui/styles/kendo.bootstrap.min.css"></require>
+    <require from="kendo-ui/styles/kendo.common.core.min.css!"></require>
+    <require from="kendo-ui/styles/kendo.bootstrap.min.css!"></require>
 
   	<nav-bar router.bind="router"></nav-bar>
 
