second page for About

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <h3>About Aurelia-KendoUI Plugin (bridge)</h3>
-  
+
         <br>
         <div au-kendo-tabstrip>
             <!-- Tabs -->
@@ -22,17 +22,17 @@
                 <!-- Row 1, tab page 1 - 3 columns (images) -->
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
-                        <img src="src/images/aurelia-logo-04.png" >     
+                        <img src="src/images/aurelia-logo-04.png" >
                     </div>
                    <div class="col-xs-12 col-sm-4">
-                        <img src="src/images/bridge-image-08-low.png" >     
-                    </div>            
+                        <img src="src/images/bridge-image-08-low.png" >
+                    </div>
                     <div class="col-xs-12 col-sm-4">
-                        <img src="src/images/kendo-logo-05.png" >     
-                    </div>            
+                        <img src="src/images/kendo-logo-05.png" >
+                    </div>
                 </div>
 
-                <br>        
+                <br>
                 <br>
 
                 <!-- Row 2, tab page 1 - 2 columns (text) -->
@@ -59,20 +59,136 @@
 
                         <p>
                             Kendo UI Professional is one of the commercial versions of Kendo UI. It is a comprehensive framework providing 70+ Kendo UI widgets, and includes a simple and consistent programming interface, a rock-solid DataSource, out-of-the-box themes, an MVVM framework, and more. Kendo UI Professional includes widgets for enterprise-grade line-of-business applications and is suitable for creating professional websites that require expert and timely technical support.
-                        </p>                
+                        </p>
                         <p>
-                           Kendo UI Core is the free and open-source Kendo UI distribution, released under Apache v2.0 License. It provides access to a limited number of widgets and framework features, and to 1,000+ tests running across browsers for each commit to the Kendo UI Core GitHub repository. Kendo UI Core is suitable for open-source or commercial projects that do not require complex UI, such as Grid, Chart, etc., nor dedicated technical support. Kendo UI Core does not offer dedicated technical support. 
-                        </p>                
-                    </div>            
+                           Kendo UI Core is the free and open-source Kendo UI distribution, released under Apache v2.0 License. It provides access to a limited number of widgets and framework features, and to 1,000+ tests running across browsers for each commit to the Kendo UI Core GitHub repository. Kendo UI Core is suitable for open-source or commercial projects that do not require complex UI, such as Grid, Chart, etc., nor dedicated technical support. Kendo UI Core does not offer dedicated technical support.
+                        </p>
+                    </div>
                 </div>
-                
+
             </div>
 
-            <!-- Second tab page - just a line of text -->
+            <!-- Second tab page - columns listing suported controls -->
             <div>
-                <p>Description of how to use Aurelia-KendoUI bridge</p>
+                <br>
+                <br>
+
+                <!-- Second tab page title - single column -->
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12">
+                        <p>
+                            <span style="font-size:18px">
+                                Only controls currently implemented as Aurelia components have active links
+                            </span>
+                        </p>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+
+                <!-- Second tab page content - five columns -->
+                <div class="row">
+                    <div class="col-xs-12 col-sm-2">
+                        MOST POPULAR                          <br>
+                        <a href="#">Grid</a>                  <br>
+                        <a href="#">Editor</a>                <br>
+                        <a href="#">Scheduler</a>             <br>
+                        <a href="#">Bar Charts</a>            <br>
+                        <a href="#">Line Charts</a>           <br>
+                        <a href="#">Stock Charts</a>          <br>
+                        <a href="#">DropDownList</a>          <br>
+                        <a href="#">Window</a>                <br>
+                        <a href="#">Upload</a>                <br>
+                        <a href="#">TreeView</a>              <br>
+                    </div>
+
+                   <div class="col-xs-12 col-sm-2">
+                        DATA MANAGEMENT                       <br>
+                        <a href="#">Grid</a>                  <br>
+                        <a href="#">Spreadsheet</a>           <br>
+                        <a href="#">Listview</a>              <br>
+                        <a href="#">Pivot Grid</a>            <br>
+                        <a href="#">TreeList</a>              <br>
+                        <a href="#">ScrollView</a>            <br>
+                        <br>
+                        EDITORS                               <br>
+                        <a href="#">Autocomplete</a>          <br>
+                        <a href="#">ColorPicker</a>           <br>
+                        <a href="#">Combobox</a>              <br>
+                        <a href="#">DatePicker</a>            <br>
+                        <a href="#">DateTimePicker</a>        <br>
+                        <a href="#">DropDownList</a>          <br>
+                        <a href="#">Editor</a>                <br>
+                        <a href="#">MaskedTextBox</a>         <br>
+                        <a href="#">MultiSelect</a>           <br>
+                        <a href="#">Numeric TextBox</a>       <br>
+                        <a href="#">Slider</a>                <br>
+                        <a href="#">TimePicker</a>            <br>
+                        <a href="#">Upload</a>                <br>
+                        <a href="#">Switch</a>                <br>
+                   </div>
+
+                   <div class="col-xs-12 col-sm-2">
+                        CHARTS                                <br>
+                       <a href="#">Area Charts</a>            <br>
+                       <a href="#">Bar Charts</a>             <br>
+                       <a href="#">Box Plot Charts</a>        <br>
+                       <a href="#">Bubble Charts</a>          <br>
+                       <a href="#">Bullet Charts</a>          <br>
+                       <a href="#">Donut Charts</a>           <br>
+                       <a href="#">Funnel Charts</a>          <br>
+                       <a href="#">Line Charts</a>            <br>
+                       <a href="#">Pie Charts</a>             <br>
+                       <a href="#">Polar Charts</a>           <br>
+                       <a href="#">Radar Charts</a>           <br>
+                       <a href="#">Range Bar Charts</a>       <br>
+                       <a href="#">Scatter Charts</a>         <br>
+                       <a href="#">Sparklines</a>             <br>
+                       <a href="#">Stock Charts</a>           <br>
+                       <a href="#">TreeMap</a>                <br>
+                       <a href="#">Waterfall Charts</a>       <br>
+                       <br>
+                       GAUGES                                 <br>
+                       <a href="#">Linear Gauge</a>           <br>
+                       <a href="#">Radial Gauge</a>           <br>
+                   </div>
+
+                   <div class="col-xs-12 col-sm-2">
+                       BARCODES                               <br>
+                       <a href="#">Barcode</a>                <br>
+                       <a href="#">QR Code</a>                <br>
+                       <br>
+                       DIAGRAMS & MAPS                        <br>
+                       <a href="#">Diagram</a>                <br>
+                       <a href="#">Map</a>                    <br>
+                       <br>
+                       SCHEDULING                            <br>
+                       <a href="#">Calendar</a>              <br>
+                       <a href="#">Gantt</a>                 <br>
+                       <a href="#">Scheduler</a>             <br>
+                       <a href="#"></a>                      <br>
+                   </div>
+
+                   <div class="col-xs-12 col-sm-2">
+                       LAYOUT                                 <br>
+                       <a href="#">Notification</a>           <br>
+                       <a href="#">Responsive Panel</a>       <br>
+                       <a href="#">Splitter</a>               <br>
+                       <a href="#">Tooltip</a>                <br>
+                       <a href="#">Window</a>                 <br>
+                       <br>
+                       NAVIGATION                             <br>
+                       <a href="#">Button</a>                 <br>
+                       <a href="#">ButtonGroup</a>            <br>
+                       <a href="#">Menu</a>                   <br>
+                       <a href="#">PanelBar</a>               <br>
+                       <a href="#">TabStrip</a>               <br>
+                       <a href="#">ToolBar</a>                <br>
+                       <a href="#">TreeView</a>               <br>
+                   </div>
+                </div>
             </div>
         </div>
-    
+
     </section>
 </template>
