added Tab Position case to Tabstrip

--- a/sample/index.html
+++ b/sample/index.html
@@ -8,16 +8,19 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  
+
   <body aurelia-app="main">
     <div class="splash">
       <div class="message">Aurelia Kendo Samples</div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
+    <script src="vendors/src/jquery.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
+
+
     <script>
       System.import('aurelia-bootstrapper');
 
