--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -112,7 +112,7 @@
                         <a href="#">ScrollView</a>            <br>
                         <br>
                         EDITORS                               <br>
-                        <a href="#">Autocomplete</a>          <br>
+                        <a href.bind="src/autcomplete/index">Autocomplete</a>          <br>
                         <a href="#">ColorPicker</a>           <br>
                         <a href="#">Combobox</a>              <br>
                         <a href="#">DatePicker</a>            <br>
