--- a/sample/src/button/api.html
+++ b/sample/src/button/api.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="API" allow-collapse.bind="false" footer="Click the buttons below to enable/disable me">
-            <button au-kendo-button disabled.bind="disabled" class="k-primary" click.delegate="test()">Click me</button>
+            <button au-kendo-button="enable.bind: enabled" class="k-primary" click.delegate="test()">Click me</button>
         </collapse-panel>
         <div class="well panel panel-default">
             <button au-kendo-button click.delegate="disable()">Disable</button>
@@ -17,7 +17,7 @@
                 <div>
                     <textarea au-markdown>
 ```
-<button au-kendo-button disabled.bind="disabled" class="k-primary" click.delegate="test()">Click me</button>
+<button au-kendo-button enable.bind="enabled" class="k-primary" click.delegate="test()">Click me</button>
 ```
                     </textarea>
                 </div>
@@ -25,18 +25,18 @@
                     <textarea au-markdown>
 ```
 export class Api {
-    disabled = false;
+    enabled = true;
 
     disable() {
-        this.disabled = true;
+        this.enabled = false;
     }
 
     enable() {
-        this.disabled = false;
+        this.enabled = true;
     }
 
     test() {
-        console.log("You clicked me");
+        alert("You clicked me");
     }
 }
 ```
